<resources>
    <string name="app_name">Pasig Safety</string>
    <string name="logo_name">Pasig Safety</string>
    <string name="powered_by">Powered by Pasig City</string>

    <!--Strings for Onboarding Screen -->

    <!--Title-->
    <string name="first_slide_title">Pasig Safety</string>
    <string name="second_slide_title">Crime Spot</string>
    <string name="third_slide_title">Nearby Police Station</string>

    <!--Pasigsafety googleaccount <string name="API_KEY">AIzaSyCLy0pBjCXHYXWYBzi3y8gRsp5TcJa2Mbo</string>-->
    <!--Marte gmail-->
    <string name="API_KEY">AIzaSyAfbGP14EEyceB__hkg5zbOrv5m3iF9vbY</string>


    <!--Description-->
    <string name="first_slide_description">A Crime Evaluator application used to analyze, map and visualize crime incidents.</string>
    <string name="second_slide_description">Easily locate and identify crime on the map!</string>
    <string name="third_slide_description">You can spot the nearest police station.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="get_started">Lets Get Started</string>

    <!--StartUp-->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="startup_heading">Pasig Safety</string>
    <string name="startup_tagline">We care about your Safety</string>

    //login
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>

    //signup
    <string name="transition_login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next">NEXT</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_age">Birthday</string>

    //OTP
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+639123456789</string>
    <string name="otp_verify_code">Verify Code</string>

    //forget password
    <string name="forget_password_detail">Provide your account\'s phone number for which you want to reset your password </string>
    <string name="enter_email">Email</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="new_credentials">New \nCredentials</string>
    <string name="new_credentials_detail">Your identity has been verified!\nSet your new password</string>
    <string name="password_updated">Password \nUpdated</string>
    <string name="password_updated_message">Your password has been updated!</string>


    <string name="pasig_safety">Powered By: Pasig City</string>

    //menu for navigation drawer
    <string name="home">HOME</string>
    <string name="crime_spot">CRIME SPOT</string>
    <string name="police_contact">POLICE CONTACT</string>
    <string name="profile">PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="help">HELP</string>
    <string name="about">ABOUT</string>
    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_place">Search Place</string>


    <string name="drug_addicts">Drug Addicts</string>
    <string name="robberyPrecautions">Keep your phones in your pocket\'s robbers could be anywhere!</string>
    <string name="physicalInjuryPrecautions">Please avoid going in dark places if you are alone!</string>
    <string name="precautions">The crime in this area is </string>
    <string name="secondLinePrecautions">Be aware of your surroundings and check nearest police station if needed.</string>


    <!--About Us-->
    <string name="first_paragraph">You don\'t have to be anxious about your safety; this application can help you overcome your wariness about going somewhere!</string>
    <string name="second_paragraph">Pasig Safety Application has a lot of features! When you log in, the application will request GPS permission. To ensure that the application knows your current location, you must click Allow. Then simply click the search button to quickly find your desired location!</string>
    <string name="third_paragraph">You will be taken directly to the main dashboard. A blue circle with a radius of 500m represents your current location on the map. Any crime within that range will be displayed. When you click the crime marker, it will show you the crime rates and how safe your location is.</string>
    <string name="fourth_paragraph">This application also displays marked crime spots and shows the user\'s nearest police contact location.</string>
    <string name="fifth_paragraph">Crime spots can be viewed by clicking the "Crime Spot" button.</string>
    <string name="sixth_paragraph">New crime spots with types of crime and user experience can be added by long pressing and holding on a spot on the map.</string>
    <string name="seventh_paragraph">The "Police Contact" button must be clicked to find the nearest police contact location. This app also shows the path of a police contact location from a given location.</string>

    <!--Developer-->
    <string name="carl">Carl Jeremiah Dela Cruz</string>
    <string name="chie">Richie Grace Factor</string>
    <string name="thomas">Thomas Allyson Jumawan</string>
    <string name="alex">Alex Pornela</string>


    <!--For Crime Type Array-->
    <string-array name="crime_type">
        <item>Robbery</item>
        <item>Scam</item>
        <item>Theft</item>
        <item>Physical Injury</item>
        <item>Gambling</item>
        <item>CarNapping</item>
    </string-array>

    <!--For Crime Icon Item-->
    <string-array name="crime_ic">
        <item>robbery_icon</item>
        <item>scam_icon</item>
        <item>theft_icon</item>
        <item>physical_injury_icon</item>
        <item>gambling_icon</item>
        <item>carnapping_icon</item>
    </string-array>

    <!--For Crime Description Item-->
    <string-array name="crime_desc">
        <item>Taking or attempting to take anything of value by force, threat of force, or by putting the victim in fear.</item>
        <item>Any fraudulent business or scheme that takes money or other goods from an unsuspecting person.</item>
        <item>Taking of another person\'s property or services without that person\'s permission or consent with the intent to deprive the rightful owner of it</item>
        <item>Impairment of one’s physical condition or substantial pain.</item>
        <item>Accepting, recording, or registering bets, or carrying on a policy game or any other lottery, or playing any game of chance, for money or other thing of value.</item>
        <item>Taking, with intent to gain, of a motor vehicle belonging to another without the latter\’s consent, or by means of violence against or intimidation of persons, or by using force upon things.</item>

    </string-array>

    <!--For Crime Icon Item-->
    <string-array name="barangay_select">
        <item>Santolan</item>
        <item>Dela Paz</item>
        <item>Manggahan</item>

    </string-array>

    <string-array name="robbery_precautions">
        <item>Avoid walking on the streets late at night.</item>
        <item> Don\'t look like an easy target. </item>
        <item>Keep an eye out! Keep your valuables out of sight of others.</item>
        <item>Robbers could be anywhere!</item>
    </string-array>

    <string-array name="gambling_precautions">
        <item>Gambling incidents have occurred here, so be on the lookout!</item>
        <item> Be financially secure and don\'t consider gambling a way to make money! </item>
    </string-array>

    <string-array name="physical_injury_precautions">
        <item>In this location, a physical injury occurred. Keep vigilance.</item>
        <item> When possible, walk on the sidewalks.  </item>
        <item> Stay close to the curb, avoiding doorways, bushes, and other possible hiding places for an assailant. </item>
    </string-array>

    <string-array name="scam_precautions">
        <item>Scammers have been reported in this area.</item>
        <item> Don\'t talk to strangers. </item>
        <item> When you detect or hear something suspicious, proceed with caution.. </item>
    </string-array>

    <string-array name="theft_precautions">
        <item>Thieves can be found anywhere now!</item>
        <item>  Keep valuables, such as purses and wallets, cell phones, electronics, and jewelry, out of vision, and never leave valuables unattended. </item>
    </string-array>

    <string-array name="carnapping_precautions">
        <item>Carnappers could be located anywhere! If you have a vehicle or a car, always lock the doors and windows while parked.</item>
        <item> Always park in a secure and safe location. </item>
        <item> To avoid temptation, avoid leaving valuables inside the vehicle. </item>
    </string-array>




</resources>