<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:paddingBottom="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CrimeSpotFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/about_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/about_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/first_paragraph"
            android:textAlignment="viewStart"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_header"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/second_paragraph"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/third_paragraph"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/fourth_paragraph"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/third"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/fifth_paragraph"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourth"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/sixth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/sixth_paragraph"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifth"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/seventh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/seventh_paragraph"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixth"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/dev_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:padding="15dp"
            android:src="@drawable/dev_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seventh"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev_bg"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/carl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko_semibold"
                android:text="@string/carl"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/chie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko_semibold"
                android:text="@string/chie"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thomas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko_semibold"
                android:text="@string/thomas"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko_semibold"
                android:text="@string/alex"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:src="@drawable/about_contact_bg"
            app:layout_constraintBottom_toTopOf="@+id/about_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_medium"
            android:text="Connect With Us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintVertical_bias="0.09" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/teko_medium"
            android:text="pasigsafety@gmail.com"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_outline_email_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintVertical_bias="0.29000002" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_medium"
            android:text="Version 1.0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintVertical_bias="0.65999997" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_medium"
            android:text="Copyright 2022 by Pasig Safety"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev"
            app:layout_constraintVertical_bias="0.81" />




    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>